--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,21 @@
     }
 }
 
+.topbanner .inner {
+    display: block;
+    width: 2000px;
+    height: 100px;
+    background: url(../img/topbanner.jpg) no-repeat;
+    cursor: pointer;
+
+    overflow: hidden;
+    transition: 1s;
+}
+
+.topbanner .inner:hover {
+    height: 300px;
+    background: url(../img/topbanner_on.jpg) no-repeat;
+}
 
 h2 {
     font-family: 'Noto Serif';
@@ -35,7 +50,6 @@ h2 {
 
 .header {
     position: relative;
-
 }
 
 .header h1 {
