--- a/css/main.css
+++ b/css/main.css
@@ -24,21 +24,30 @@
     }
 }
 
-.topbanner .inner {
-    display: block;
-    width: 2000px;
-    height: 100px;
-    background: url(../img/topbanner.jpg) no-repeat;
-    cursor: pointer;
+header {
+    padding-top: 100px;
+}
 
-    overflow: hidden;
+
+.topbanner .inner {
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    z-index: 999;
+    background: url(../img/topbanner.jpg) no-repeat;
     transition: 1s;
 }
 
 .topbanner .inner:hover {
+    position: absolute;
+    width: 100%;
     height: 300px;
+    z-index: 999;
     background: url(../img/topbanner_on.jpg) no-repeat;
+    transition: 1s;
 }
+
+
 
 h2 {
     font-family: 'Noto Serif';
@@ -54,7 +63,7 @@ h2 {
 
 .header h1 {
     position: absolute;
-    top: 0;
+    top: 100px;
     left: 150px;
     font-size: 0;
     line-height: 100px;
@@ -74,7 +83,7 @@ h2 {
 
 .header .inner .right {
     position: absolute;
-    top: 0;
+    top: 100px;
     right: 150px;
     display: flex;
     gap: 15px;
@@ -266,15 +275,15 @@ h2 {
 
 .mainVisual .scroll .line {
     position: absolute;
-    bottom: 60px;
-    left: 150px;
-    height: 86px;
+    bottom: 85px;
+    left: 146px;
+    height: 68px;
 }
 
 .mainVisual .scroll .line::before {
     position: absolute;
     content: "";
-    bottom: -50px;
+    bottom: -80px;
     left: 10px;
     width: 1px;
     opacity: 0.8;
@@ -286,7 +295,7 @@ h2 {
 .mainVisual .scroll .line::after {
     content: "";
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     left: 6px;
     width: 8px;
     height: 8px;
